签到页面重新布局完成,接下来完成信息填充逻辑部分

--- a/app/src/main/res/layout/sign_fragment_layout.xml
+++ b/app/src/main/res/layout/sign_fragment_layout.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -17,21 +16,14 @@
             android:id="@+id/id_surfaceview"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
-
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom">
-
-            <!--token picture button-->
-            <Button
-                android:id="@+id/id_take_pic_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:text="@string/sign" />
-        </RelativeLayout>
-
     </FrameLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="3"
+        android:orientation="vertical">
+
+        <include layout="@layout/info_view_layout" />
+    </LinearLayout>
 </LinearLayout>
