--- a/app/src/main/res/layout/title_layout.xml
+++ b/app/src/main/res/layout/title_layout.xml
@@ -3,8 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_weight="10"
+    android:layout_height="50dp"
     android:background="#EEE9E9">
 <ImageView
     android:id="@+id/id_add_back_btn"
